--- a/www/edit.html
+++ b/www/edit.html
@@ -16,7 +16,7 @@
                         style="height:512px;">
 
                         <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
-                            src="canvas.html?algorithm=default" id="edit_edit_preview_iframe"></iframe>
+                            src="canvas.html?algorithm=default" id="edit_preview_iframe"></iframe>
                     </div>
                 </div>
                 <br>
@@ -184,7 +184,7 @@
                 <br>
                 <div id="edit_algorithm_html" class="row" style="display: none;">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <textarea id="edit_edit_algorithm_html_textarea" rows="8" style="text-align:left; border: 1px solid #FFF;"
+                        <textarea id="edit_algorithm_html_textarea" rows="8" style="text-align:left; border: 1px solid #FFF;"
                             placeholder="Enter html here..." value=""></textarea>
                         <br>
                     </div>
@@ -210,7 +210,7 @@
                 <br>
                 <div id="edit_algorithm_javascript" class="row" style="display: none;">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <textarea id="edit_edit_edit_algorithm_javascript_textarea" rows="8"
+                        <textarea id="edit_algorithm_javascript_textarea" rows="8"
                             style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."
                             value="{algorithm.client}"></textarea>
                         <br>
