--- a/www/edit.html
+++ b/www/edit.html
@@ -16,7 +16,7 @@
                         style="height:512px;">
 
                         <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
-                            src="canvas.html?algorithm=default" id="edit_preview_iframe"></iframe>
+                            src="canvas.html?algorithm=background" id="edit_preview_iframe"></iframe>
                     </div>
                 </div>
                 <br>
