--- a/www/index.html
+++ b/www/index.html
@@ -585,15 +585,14 @@
                     $("#logout_button").removeClass("active")
                     
                     var algorithm = getQueryVariable("algorithm");
-                    var algorithm_query_parameter = algorithm ? algorithm : "background";
-                    let response = await fetch(url);
-                    if (response.ok) { // if HTTP-status is 200-299
-                    // get the response body (the method explained below)
-                        let algorithm = JSON.parse(await response.text());
-                        this.set_ui_algorithm(algorithm);
-                    } else {
-                        this.set_ui_algorithm(default_create_algorithm);
-                    }
+                    var algorithm = algorithm_query_parameter ? algorithm_query_parameter : "background";
+                    fetch('https://www.MetaHumanity.xyz/algorithms/'+algorithm+'.json')
+                        .then(function(response){
+                            this.set_ui_algorithm(response.json());
+                        }.bind(this))
+                        .catch(function(err){
+                            this.set_ui_algorithm(default_create_algorithm);
+                        }.bind(this));
                     break;
                 case pages.CREATE:
                     $("#menu").fadeIn(1000.);
