--- a/www/index.html
+++ b/www/index.html
@@ -584,7 +584,7 @@
                     $("#signup_button").removeClass("active")
                     $("#logout_button").removeClass("active")
                     
-                    var algorithm = getQueryVariable("algorithm");
+                    var algorithm_query_parameter = getQueryVariable("algorithm");
                     var algorithm = algorithm_query_parameter ? algorithm_query_parameter : "background";
                     fetch('https://www.MetaHumanity.xyz/algorithms/'+algorithm+'.json')
                         .then(function(response){
