--- a/www/index.html
+++ b/www/index.html
@@ -587,13 +587,15 @@
                     var algorithm_query_parameter = getQueryVariable("algorithm");
                     var algorithm = algorithm_query_parameter ? algorithm_query_parameter : "background";
                     fetch('https://www.MetaHumanity.xyz/algorithms/'+algorithm+'.json')
-                        .then(function(response){
-                            this.set_ui_algorithm(response.json());
+                    .then(function(response){
+                        response.json().then(function(val){
+                            this.set_ui_algorithm(val);
                         }.bind(this))
-                        .catch(function(err){
-                            console.log(err);
-                            this.set_ui_algorithm(default_create_algorithm);
-                        }.bind(this));
+                    }.bind(this))
+                    .catch(function(err){
+                        console.log(err);
+                        this.set_ui_algorithm(default_create_algorithm);
+                    }.bind(this));
                     break;
                 case pages.CREATE:
                     $("#menu").fadeIn(1000.);
