--- a/www/browse.html
+++ b/www/browse.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-    <title>MetaHumanity.xyz - Browse</title>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="js/protobuf.js"></script>
-</head>
-
-<body>
-    <div class="col-0 col-sm-0 col-md-0 col-lg-1">
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-10">
-        <br>
-        <h1 class="read_only"
-            style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-            <a style="color:#FFF!important; ">Algorithm Preview:</a>
-        </h1>
-        <br>
-    </div>
-    <div class="col-0 col-sm-0 col-md-0 col-lg-1">
-    </div>
-    
-</body>
-
-</html>
+<div class="col-0 col-sm-0 col-md-0 col-lg-1">
+</div>
+<div class="col-12 col-sm-12 col-md-12 col-lg-10">
+    <br>
+    <!--BROWSE_VIEW-->
+    <br>
+</div>
+<div class="col-0 col-sm-0 col-md-0 col-lg-1">
+</div>
