--- a/www/home.html
+++ b/www/home.html
@@ -11,7 +11,7 @@
         <br>
         <h1 class="logged_out_content"
             style="padding: 14px; text-align:left; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-            For more information, use one of the three option buttons below:
+            For more information, use one of the option buttons below:
             <br>
             <br>
             <div style="text-align: center;">
@@ -23,6 +23,12 @@
                 <button type="button" class="btn btn-outline-primary mx-auto"
                     onclick="state.show_page(pages.POLICY);">View
                     Privacy Policy</button>
+                <button type="button" class="btn btn-outline-success mx-auto"
+                    onclick="state.show_page(pages.BROWSE);">Browse</button>
+                <button type="button" class="btn btn-outline-success mx-auto"
+                    onclick="state.show_page(pages.EDIT);">Edit</button>
+                <button type="button" class="btn btn-outline-success mx-auto"
+                    onclick="state.show_page(pages.CREATE);">Create</button>
             </div>
         </h1>
         <h1 class="logged_in_content"
