--- a/www/browse.html
+++ b/www/browse.html
@@ -1,9 +1,9 @@
-<div class="row connected_content out-of-sight" id="home">
+<div class="row connected_content out-of-sight" id="browse">
     <div class="col-0 col-sm-0 col-md-0 col-lg-1">
     </div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-10">
         <br>
-        <!--BROWSE_VIEW-->
+        <!---#BROWSE_VIEW#--->
         <br>
     </div>
     <div class="col-0 col-sm-0 col-md-0 col-lg-1">
