--- a/www/index.html
+++ b/www/index.html
@@ -66,16 +66,7 @@
         {{delete_algorithm.html}}
         {{request.html}}
         {{home.html}}
-        <div class="row connected_content out-of-sight" id="browse">
-            <div class="col-0 col-sm-0 col-md-1 col-lg-2">
-            </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
-                <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="width: 100%; height: 100%;"
-                src="browse.html" id="browse_iframe"></iframe>
-            </div>
-            <div class="col-0 col-sm-0 col-md-1 col-lg-2">
-            </div>
-        </div>
+        {{browse.html}}
         {{edit.html}}
         {{create.html}}
         {{delete_account.html}}
@@ -87,7 +78,7 @@
         src="canvas.html?algorithm=background" id="background_iframe"></iframe>
     <script>
         var iframe = null;
-
+        
         //Protocol Buffer Types
         var Message = null;
         var User = null;
