--- a/www/browse.html
+++ b/www/browse.html
@@ -3,17 +3,45 @@
     </div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-10">
         <br>
+        <h1
+            style=" padding-top: 14px; padding-bottom: 14px; text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
+                    <a>Search Criteria:</a>
+                    <br>
+                    <br>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                    <input id="search_criteria" style="width:inherit; text-align:center; color:#fff;"
+                        placeholder="Enter search criteria..." value="">
+                    <br>
+                    <br>
+
+                </div>
+            </div>
+            <br>
+            <button type="button" class="btn btn-outline-success mx-auto" onclick="sortViews()">Views</button>
+            <button type="button" class="btn btn-outline-success mx-auto" onclick="sortVotes()">Votes</button>
+            <button type="button" class="btn btn-outline-success mx-auto" onclick="sortCreated()">Created</button>
+            <button type="button" class="btn btn-outline-success mx-auto" onclick="sortEdited()">Edited</button>
+
+            <button type="button" class="btn btn-outline-success mx-auto" style="border: 3px solid #f00 !important;"
+                onclick="clearSearch()">Clear Search / Clear Sort</button>
+
+            <button type="button" class="btn btn-outline-success mx-auto" style="width:10%!important;"
+                onclick="previousPage()">&lt;</button>
+            <button type="button" class="btn btn-outline-success mx-auto" style="width:10%!important;"
+                onclick="firstPage()">&lt;&lt;</button>
+            <button type="button" class="btn btn-outline-success mx-auto" style="width:10%!important;"
+                onclick="lastPage()">&gt;&gt;</button>
+            <button type="button" class="btn btn-outline-success mx-auto" style="width:10%!important;"
+                onclick="nextPage()">&gt;</button>
+
+            <button type="button" class="btn btn-outline-success mx-auto" onclick="copyCriteriea()">Page
+                {{paging.current_page+1}} of {{paging.max_page}}</button>
+
+        </h1>
         <!---#BROWSE_VIEW#--->
-
-
-
-
-
-
-
-
-
-
 
         <br>
     </div>
